update references. Implement payment
